+++++++++++
Python News
+++++++++++

(editors: check NEWS.help for information about editing NEWS using ReST.)

What's New in Python 2.7 beta 1?
================================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------

Extension Modules
-----------------

- Issue #1530559: When passing a non-integer argument to struct.pack
  with *any* integer format code (one of 'bBhHiIlLqQ'), struct.pack
  attempts to use the argument's __int__ method to convert to an
  integer before packing.  It also produces a DeprecationWarning in
  this case.  (In Python 2.6, the behaviour was inconsistent: __int__
  was used for some integer codes but not for others, and the set of
  integer codes for which it was used differed between native packing
  and standard packing.)


What's New in Python 2.7 alpha 4?
=================================

*Release date: 2010-03-06*

Core and Builtins
-----------------

- Issue #7544: Preallocate thread memory before creating the thread to avoid
  a fatal error in low memory condition.

- Issue #7820: The parser tokenizer restores all bytes in the right if
  the BOM check fails.

- Issue #7309: Fix unchecked attribute access when converting
  UnicodeEncodeError, UnicodeDecodeError, and UnicodeTranslateError to
  strings.

- Issue #7649: "u'%c' % char" now behaves like "u'%s' % char" and raises a
  UnicodeDecodeError if 'char' is a byte string that can't be decoded using
  the default encoding.

- Issue #6902: Fix problem with built-in types format incorrectly with
  0 padding.

- Issue #2560: remove an unnecessary 'for' loop from my_fgets() in
  Parser/myreadline.c.

- Issue #7988: Fix default alignment to be right aligned for
  complex.__format__. Now it matches other numeric types.

- Issue #5211: the complex type no longer uses implicit coercion in
  mixed-type binary arithmetic operations.

Library
-------

- Issue #6906: Tk should not set Unicode environment variables on Windows.
