@@ -10,6 +10,7 @@ Without you, I would've stopped working on Python long ago!
 
 PS: In the standard Python distribution, this file is encoded in UTF-8.
 
+Joaquin Cuenca Abela
 David Abrahams
 Jim Ahlstrom
 Farhan Ahmad
